--- a/qa/full-cluster-restart/build.gradle
+++ b/qa/full-cluster-restart/build.gradle
@@ -99,16 +99,9 @@ for (Version version : bwcVersions.indexCompatible) {
   }
 }
 
-test.enabled = false // no unit tests for rolling upgrades, only the rest integration test
-
-// basic integ tests includes testing bwc against the most recent version
-task integTest {
-  if (project.bwc_tests_enabled) {
-    for (final def version : bwcVersions.snapshotsIndexCompatible) {
-      dependsOn "v${version}#bwcTest"
-    }
-  }
+if (project.bwc_tests_enabled) {
+  check.dependsOn(bwcTest)
 }
 
-check.dependsOn(integTest)
+
 
