--- a/qa/mixed-cluster/build.gradle
+++ b/qa/mixed-cluster/build.gradle
@@ -67,15 +67,8 @@ for (Version version : bwcVersions.wireCompatible) {
   }
 }
 
-test.enabled = false // no unit tests for rolling upgrades, only the rest integration test
-
-// basic integ tests includes testing bwc against the most recent version
-task integTest {
-  if (project.bwc_tests_enabled) {
-    for (final def version : bwcVersions.snapshotsWireCompatible) {
-      dependsOn "v${version}#bwcTest"
-    }
-  }
+if (project.bwc_tests_enabled) {
+  check.dependsOn(bwcTest)
 }
 
-check.dependsOn(integTest)
+
