--- a/qa/query-builder-bwc/build.gradle
+++ b/qa/query-builder-bwc/build.gradle
@@ -76,14 +76,8 @@ for (Version version : bwcVersions.indexCompatible) {
     }
 }
 
-test.enabled = false // no unit tests for rolling upgrades, only the rest integration test
-
-// basic integ tests includes testing bwc against the most recent version
-task integTest {
-  if (project.bwc_tests_enabled) {
-      final def version = bwcVersions.snapshotsIndexCompatible.first()
-      dependsOn "v${version}#bwcTest"
-  }
+if (project.bwc_tests_enabled) {
+  check.dependsOn(bwcTest)
 }
 
-check.dependsOn(integTest)
+
