--- a/qa/verify-version-constants/build.gradle
+++ b/qa/verify-version-constants/build.gradle
@@ -53,13 +53,8 @@ for (Version version : bwcVersions.indexCompatible) {
     bwcTest.dependsOn(versionBwcTest)
 }
 
-test.enabled = false
-
-task integTest {
-  if (project.bwc_tests_enabled) {
-    final def version = bwcVersions.snapshotsIndexCompatible.first()
-    dependsOn "v${version}#bwcTest"
-  }
+if (project.bwc_tests_enabled) {
+    check.dependsOn(bwcTest)
 }
 
 task verifyDocsLuceneVersion {
@@ -83,5 +78,4 @@ task verifyDocsLuceneVersion {
     }
   }
 }
-
-check.dependsOn integTest, verifyDocsLuceneVersion
+check.dependsOn verifyDocsLuceneVersion
