--- a/test/framework/build.gradle
+++ b/test/framework/build.gradle
@@ -71,7 +71,7 @@ task namingConventionsMain(type: org.elasticsearch.gradle.precommit.NamingConven
 }
 precommit.dependsOn namingConventionsMain
 
-test.configure {
+utest {
   systemProperty 'tests.gradle_index_compat_versions', bwcVersions.indexCompatible.join(',')
   systemProperty 'tests.gradle_wire_compat_versions', bwcVersions.wireCompatible.join(',')
 }
