--- a/x-pack/plugin/core/build.gradle
+++ b/x-pack/plugin/core/build.gradle
@@ -96,7 +96,7 @@ sourceSets.test.java {
     srcDir '../../license-tools/src/main/java'
 }
 
-test {
+utest {
     /*
      * We have to disable setting the number of available processors as tests in the same JVM randomize processors and will step on each
      * other if we allow them to set the number of available processors as it's set-once in Netty.
