--- a/x-pack/plugin/rollup/build.gradle
+++ b/x-pack/plugin/rollup/build.gradle
@@ -39,15 +39,15 @@ integTest.enabled = false
 task internalClusterTest(type: RandomizedTestingTask,
         group: JavaBasePlugin.VERIFICATION_GROUP,
         description: 'Multi-node tests',
-        dependsOn: test.dependsOn) {
+        dependsOn: utest.dependsOn) {
     configure(BuildPlugin.commonTestConfig(project))
-    classpath = project.test.classpath
-    testClassesDir = project.test.testClassesDir
+    classpath = project.utest.classpath
+    testClassesDir = project.utest.testClassesDir
     include '**/*IT.class'
     systemProperty 'es.set.netty.runtime.available.processors', 'false'
 }
 check.dependsOn internalClusterTest
-internalClusterTest.mustRunAfter test
+internalClusterTest.mustRunAfter utest
 
 // also add an "alias" task to make typing on the command line easier task icTest {
 task icTest {
