--- a/x-pack/plugin/sql/jdbc/build.gradle
+++ b/x-pack/plugin/sql/jdbc/build.gradle
@@ -86,7 +86,7 @@ publishing {
 assemble.dependsOn shadowJar
 
 // Use the jar for testing so the tests are more "real"
-test {
+utest {
     classpath -= compileJava.outputs.files
     classpath -= configurations.compile
     classpath -= configurations.runtime
