--- a/plugins/ingest-attachment/build.gradle
+++ b/plugins/ingest-attachment/build.gradle
@@ -30,6 +30,10 @@ versions << [
   'mime4j': '0.8.1'
 ]
 
+// disabled untill https://github.com/elastic/elasticsearch/issues/31456
+// is fixed.
+integTest.enabled = false
+
 dependencies {
   // mandatory for tika
   compile "org.apache.tika:tika-core:${versions.tika}"
