Disable integTest on full cluster restart
This isn't acutally used and icorrectly runs tests without properties

--- a/qa/full-cluster-restart/build.gradle
+++ b/qa/full-cluster-restart/build.gradle
@@ -31,6 +31,8 @@ task bwcTest {
   group = 'verification'
 }
 
+integTest.enabled = false
+
 for (Version version : bwcVersions.indexCompatible) {
   String baseName = "v${version}"
 
