--- a/plugins/ingest-attachment/build.gradle
+++ b/plugins/ingest-attachment/build.gradle
@@ -30,9 +30,14 @@ versions << [
   'mime4j': '0.8.1'
 ]
 
-// disabled untill https://github.com/elastic/elasticsearch/issues/31456
-// is fixed.
-integTest.enabled = false
+integTestRunner {
+    // disabled untill https://github.com/elastic/elasticsearch/issues/31456
+    // is fixed.
+    systemProperty 'tests.rest.blacklist', [
+      'ingest_attachment/20_attachment_processor/Test indexed chars are configurable',
+      'ingest_attachment/20_attachment_processor/Test indexed chars are configurable per document'
+    ].join(',')
+}
 
 dependencies {
   // mandatory for tika
