Revert "No longer replace test task, create implicit instead"
This reverts commit f1ebaf7d93e4a0a19e751109bf620477dc35023c.

--- a/libs/plugin-classloader/build.gradle
+++ b/libs/plugin-classloader/build.gradle
@@ -17,6 +17,8 @@
  * under the License.
  */
 
+test.enabled = false
+
 // test depend on ES core...
 forbiddenApisMain.enabled = false
 jarHell.enabled = false
