--- a/modules/lang-painless/spi/build.gradle
+++ b/modules/lang-painless/spi/build.gradle
@@ -35,3 +35,6 @@ publishing {
 dependencies {
   compile "org.elasticsearch:elasticsearch:${version}"
 }
+
+// no tests...yet?
+test.enabled = false
