--- a/qa/rolling-upgrade/build.gradle
+++ b/qa/rolling-upgrade/build.gradle
@@ -140,9 +140,15 @@ for (Version version : bwcVersions.wireCompatible) {
   }
 }
 
-if (project.bwc_tests_enabled) {
-  check.dependsOn(bwcTest)
+test.enabled = false // no unit tests for rolling upgrades, only the rest integration test
+
+// basic integ tests includes testing bwc against the most recent version
+task integTest {
+  if (project.bwc_tests_enabled) {
+    for (final def version : bwcVersions.snapshotsWireCompatible) {
+      dependsOn "v${version}#bwcTest"
+    }
+  }
 }
 
-
-
+check.dependsOn(integTest)
