--- a/qa/vagrant/build.gradle
+++ b/qa/vagrant/build.gradle
@@ -67,6 +67,9 @@ forbiddenApisMain {
   ]
 }
 
+// we don't have additional tests for the tests themselves
+tasks.test.enabled = false
+
 // this project doesn't get published
 tasks.dependencyLicenses.enabled = false
 tasks.dependenciesInfo.enabled = false
