--- a/x-pack/qa/openldap-tests/build.gradle
+++ b/x-pack/qa/openldap-tests/build.gradle
@@ -21,10 +21,10 @@ task copyIdpTrust(type: Copy) {
 }
 if (project.rootProject.vagrantSupported) {
   project.sourceSets.test.output.dir(outputDir, builtBy: copyIdpTrust)
-  integTest.dependsOn openLdapFixture
-  integTest.finalizedBy idpFixtureProject.halt
+  test.dependsOn openLdapFixture
+  test.finalizedBy idpFixtureProject.halt
 } else {
-  integTest.enabled = false
+  test.enabled = false
 }
 
 namingConventions {
