--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -146,7 +146,7 @@ if (project != rootProject) {
   thirdPartyAudit.enabled = false
 
   // test for elasticsearch.build tries to run with ES...
-  utest.enabled = false
+  test.enabled = false
 
   // TODO: re-enable once randomizedtesting gradle code is published and removed from here
   licenseHeaders.enabled = false
