--- a/distribution/tools/java-version-checker/build.gradle
+++ b/distribution/tools/java-version-checker/build.gradle
@@ -7,6 +7,7 @@ targetCompatibility = JavaVersion.VERSION_1_7
 // java_version_checker do not depend on core so only JDK signatures should be checked
 forbiddenApisMain.signaturesURLs = [PrecommitTasks.getResource('/forbidden/jdk-signatures.txt')]
 
+test.enabled = false
 namingConventions.enabled = false
 javadoc.enabled = false
 loggerUsageCheck.enabled = false
