--- a/libs/cli/build.gradle
+++ b/libs/cli/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile "org.elasticsearch:elasticsearch-core:${version}"
 }
 
+test.enabled = false
 // Since CLI does not depend on :server, it cannot run the jarHell task
 jarHell.enabled = false
 
