--- a/modules/transport-netty4/build.gradle
+++ b/modules/transport-netty4/build.gradle
@@ -47,7 +47,7 @@ dependencyLicenses {
   mapping from: /netty-.*/, to: 'netty'
 }
 
-utest {
+test {
     /*
      * We have to disable setting the number of available processors as tests in the same JVM randomize processors and will step on each
      * other if we allow them to set the number of available processors as it's set-once in Netty.
