--- a/plugins/discovery-ec2/build.gradle
+++ b/plugins/discovery-ec2/build.gradle
@@ -48,7 +48,7 @@ bundlePlugin {
   }
 }
 
-utest {
+test {
   // this is needed for insecure plugins, remove if possible!
   systemProperty 'tests.artifact', project.name
 }
