--- a/plugins/examples/rest-handler/build.gradle
+++ b/plugins/examples/rest-handler/build.gradle
@@ -25,6 +25,9 @@ esplugin {
   classname 'org.elasticsearch.example.resthandler.ExampleRestHandlerPlugin'
 }
 
+// No unit tests in this example
+test.enabled = false
+
 task exampleFixture(type: org.elasticsearch.gradle.test.AntFixture) {
   dependsOn testClasses
   executable = new File(project.runtimeJavaHome, 'bin/java')
