--- a/plugins/repository-s3/build.gradle
+++ b/plugins/repository-s3/build.gradle
@@ -59,7 +59,7 @@ additionalTest('testRepositoryCreds'){
   systemProperty 'es.allow_insecure_settings', 'true'
 }
 
-utest {
+test {
   // these are tested explicitly in separate test tasks
   exclude '**/*CredentialsTests.class'
 }
