--- a/qa/evil-tests/build.gradle
+++ b/qa/evil-tests/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
 // TODO: give each evil test its own fresh JVM for more isolation.
 
-integTest {
+test {
   systemProperty 'tests.security.manager', 'false'
 }
 
