--- a/qa/verify-version-constants/build.gradle
+++ b/qa/verify-version-constants/build.gradle
@@ -53,8 +53,13 @@ for (Version version : bwcVersions.indexCompatible) {
     bwcTest.dependsOn(versionBwcTest)
 }
 
-if (project.bwc_tests_enabled) {
-    check.dependsOn(bwcTest)
+test.enabled = false
+
+task integTest {
+  if (project.bwc_tests_enabled) {
+    final def version = bwcVersions.snapshotsIndexCompatible.first()
+    dependsOn "v${version}#bwcTest"
+  }
 }
 
 task verifyDocsLuceneVersion {
@@ -78,4 +83,5 @@ task verifyDocsLuceneVersion {
     }
   }
 }
-check.dependsOn verifyDocsLuceneVersion
+
+check.dependsOn integTest, verifyDocsLuceneVersion
