--- a/qa/wildfly/build.gradle
+++ b/qa/wildfly/build.gradle
@@ -212,6 +212,8 @@ if (!Os.isFamily(Os.FAMILY_WINDOWS)) {
 
 check.dependsOn(integTest)
 
+test.enabled = false
+
 dependencyLicenses.enabled = false
 dependenciesInfo.enabled = false
 
