--- a/server/build.gradle
+++ b/server/build.gradle
@@ -329,12 +329,12 @@ if (isEclipse == false || project.path == ":server-tests") {
   task integTest(type: RandomizedTestingTask,
                  group: JavaBasePlugin.VERIFICATION_GROUP,
                  description: 'Multi-node tests',
-                 dependsOn: utest.dependsOn) {
+                 dependsOn: test.dependsOn) {
     configure(BuildPlugin.commonTestConfig(project))
-    classpath = project.utest.classpath
-    testClassesDir = project.utest.testClassesDir
+    classpath = project.test.classpath
+    testClassesDir = project.test.testClassesDir
     include '**/*IT.class'
   }
   check.dependsOn integTest
-  integTest.mustRunAfter utest
+  integTest.mustRunAfter test
 }
