--- a/test/fixtures/old-elasticsearch/build.gradle
+++ b/test/fixtures/old-elasticsearch/build.gradle
@@ -24,6 +24,7 @@ a "ports" file with the port on which Elasticsearch is running.
 """
 
 apply plugin: 'elasticsearch.build'
+test.enabled = false
 
 dependencies {
   // Just for the constants....
