--- a/x-pack/plugin/ml/build.gradle
+++ b/x-pack/plugin/ml/build.gradle
@@ -96,15 +96,15 @@ integTest.enabled = false
 task internalClusterTest(type: RandomizedTestingTask,
                          group: JavaBasePlugin.VERIFICATION_GROUP,
                          description: 'Multi-node tests',
-                         dependsOn: utest.dependsOn) {
+                         dependsOn: test.dependsOn) {
   configure(BuildPlugin.commonTestConfig(project))
-  classpath = project.utest.classpath
-  testClassesDir = project.utest.testClassesDir
+  classpath = project.test.classpath
+  testClassesDir = project.test.testClassesDir
   include '**/*IT.class'
   systemProperty 'es.set.netty.runtime.available.processors', 'false'
 }
 check.dependsOn internalClusterTest
-internalClusterTest.mustRunAfter utest
+internalClusterTest.mustRunAfter test
 
 // also add an "alias" task to make typing on the command line easier
 task icTest {
