--- a/x-pack/plugin/sql/sql-cli/build.gradle
+++ b/x-pack/plugin/sql/sql-cli/build.gradle
@@ -133,7 +133,7 @@ task runcli {
 }
 
 // Use the jar for testing so we can get the proper version information
-utest {
+test {
     classpath -= compileJava.outputs.files
     classpath -= configurations.compile
     classpath -= configurations.runtime
