--- a/x-pack/qa/rolling-upgrade-basic/build.gradle
+++ b/x-pack/qa/rolling-upgrade-basic/build.gradle
@@ -119,9 +119,17 @@ for (Version version : bwcVersions.wireCompatible) {
     }
 }
 
-if (project.bwc_tests_enabled) {
-    check.dependsOn(bwcTest)
+test.enabled = false // no unit tests for rolling upgrades, only the rest integration test
+
+// basic integ tests includes testing bwc against the most recent version
+task integTest {
+    if (project.bwc_tests_enabled) {
+        for (final def version : bwcVersions.snapshotsWireCompatible) {
+            dependsOn "v${version}#bwcTest"
+        }
+    }
 }
+check.dependsOn(integTest)
 
 compileTestJava.options.compilerArgs << "-Xlint:-cast,-deprecation,-rawtypes,-try,-unchecked"
 
