Fix backwards compatability builds
Fix JAVA version to 10 for ES 6.3

--- a/distribution/bwc/build.gradle
+++ b/distribution/bwc/build.gradle
@@ -153,6 +153,8 @@ subprojects {
       environment('JAVA_HOME', getJavaHome(it, 8))
     } else if ("6.2".equals(bwcBranch)) {
       environment('JAVA_HOME', getJavaHome(it, 9))
+    } else if ("6.3".equals(bwcBranch)) {
+      environment('JAVA_HOME', getJavaHome(it, 10))
     } else {
       environment('JAVA_HOME', project.compilerJavaHome)
     }
