--- a/distribution/bwc/build.gradle
+++ b/distribution/bwc/build.gradle
@@ -153,7 +153,7 @@ subprojects {
       environment('JAVA_HOME', getJavaHome(it, 8))
     } else if ("6.2".equals(bwcBranch)) {
       environment('JAVA_HOME', getJavaHome(it, 9))
-    } else if ("6.3".equals(bwcBranch)) {
+    } else if (["6.3", "6.x"].contains(bwcBranch)) {
       environment('JAVA_HOME', getJavaHome(it, 10))
     } else {
       environment('JAVA_HOME', project.compilerJavaHome)
