--- a/distribution/bwc/build.gradle
+++ b/distribution/bwc/build.gradle
@@ -150,15 +150,20 @@ subprojects {
   task buildBwcVersion(type: Exec) {
     dependsOn checkoutBwcBranch, writeBuildMetadata
     workingDir = checkoutDir
+    // we are building branches that are officially built with JDK 8, push JAVA8_HOME to JAVA_HOME for these builds
+    // also send RUNTIME_JAVA_HOME so the build doesn't fails on newer version the branch doesn't know about
     if (["5.6", "6.0", "6.1"].contains(bwcBranch)) {
-      // we are building branches that are officially built with JDK 8, push JAVA8_HOME to JAVA_HOME for these builds
       environment('JAVA_HOME', getJavaHome(it, 8))
+      environment('RUNTIME_JAVA_HOME', getJavaHome(it, 8))
     } else if ("6.2".equals(bwcBranch)) {
       environment('JAVA_HOME', getJavaHome(it, 9))
+      environment('RUNTIME_JAVA_HOME', getJavaHome(it, 9))
     } else if (["6.3", "6.x"].contains(bwcBranch)) {
       environment('JAVA_HOME', getJavaHome(it, 10))
+      environment('RUNTIME_JAVA_HOME', getJavaHome(it, 10))
     } else {
       environment('JAVA_HOME', project.compilerJavaHome)
+      environment('RUNTIME_JAVA_HOME', project.compilerJavaHome)
     }
     if (Os.isFamily(Os.FAMILY_WINDOWS)) {
       executable 'cmd'
