--- a/plugins/ingest-attachment/build.gradle
+++ b/plugins/ingest-attachment/build.gradle
@@ -30,13 +30,14 @@ versions << [
   'mime4j': '0.8.1'
 ]
 
-integTestRunner {
-    // disabled untill https://github.com/elastic/elasticsearch/issues/31456
-    // is fixed.
+if (rootProject.ext.runtimeJavaVersion.isJava11()) {
+  // disabled until https://github.com/elastic/elasticsearch/issues/31456 is fixed.
+  integTestRunner {
     systemProperty 'tests.rest.blacklist', [
-      'ingest_attachment/20_attachment_processor/Test indexed chars are configurable',
-      'ingest_attachment/20_attachment_processor/Test indexed chars are configurable per document'
+            'ingest_attachment/20_attachment_processor/Test indexed chars are configurable',
+            'ingest_attachment/20_attachment_processor/Test indexed chars are configurable per document'
     ].join(',')
+  }
 }
 
 dependencies {
