--- a/docs/build.gradle
+++ b/docs/build.gradle
@@ -40,7 +40,7 @@ integTestCluster {
 }
 
 // remove when https://github.com/elastic/elasticsearch/issues/31305 is fixed
-if (rootProject.ext.runtimeJavaVersion.isJava11()) {
+if (rootProject.ext.compilerJavaVersion.isJava11()) {
   integTestRunner {
     systemProperty 'tests.rest.blacklist', [
             'plugins/ingest-attachment/line_164',
